syntax = "proto3";
package coolstore;
option csharp_namespace = "VND.CoolStore.ShoppingCart.DataContracts.V1";

import "cart.proto";

service ShoppingCart {
  rpc GetCart(GetCartRequest) returns (GetCartResponse) {};
  rpc InsertItemToNewCart(InsertItemToNewCartRequest) returns (InsertItemToNewCartResponse) {};
  rpc UpdateItemInCart(UpdateItemInCartRequest) returns (UpdateItemInCartResponse) {};
  rpc Checkout(CheckoutRequest) returns (CheckoutResponse) {};
  rpc DeleteItem(DeleteItemRequest) returns (DeleteItemResponse) {};
}

message GetCartRequest {
  string cart_id = 1;
}

message GetCartResponse {
  repeated CartWithProductsRow rows = 1;
}

message InsertItemToNewCartRequest {
  string product_id = 1;
  int32 quantity = 2;
}

message InsertItemToNewCartResponse {
  CartDto result = 1;
}

message UpdateItemInCartRequest {
  string cart_id = 1;
  string product_id = 2;
  int32 quantity = 3;
}

message UpdateItemInCartResponse {
  CartDto result = 1;
}

message DeleteItemRequest {
  string cart_id = 1;
  string product_id = 2;
}

message DeleteItemResponse {
  string product_id = 1;
}

message CheckoutRequest {
  string cart_id = 1;
}

message CheckoutResponse {
  bool is_succeed = 1;
}
